--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/receba_db
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.default_schema=receba
+spring.jpa.properties.hibernate.default_schema=${DATABASE_SCHEMA}
 spring.jpa.hibernate.ddl-auto=none
 
 spring.redis.host=localhost
@@ -16,7 +16,10 @@ spring.rabbitmq.username=${RABBIT_USERNAME}
 spring.rabbitmq.password=${RABBIT_PASSWORD}
 
 server.port=8080
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+
+management.endpoints.web.exposure.include=health
+management.health.rabbit.enabled=false
 
 spring.security.oauth2.resourceserver.opaque-token.introspection-uri=http://localhost:8080/oauth2/introspect
 spring.security.oauth2.resourceserver.opaque-token.client-id=receba-frontend
@@ -24,12 +27,12 @@ spring.security.oauth2.resourceserver.opaque-token.client-secret=receba
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/oauth2/jwks
 
 receba.security.jksLocation=classpath:keystore/receba.jks
-receba.security.password=receba
-receba.security.keypair-alias=receba
+receba.security.password=${RSA_TOKEN_SIGNER_PASSWORD}
+receba.security.keypair-alias=${RSA_TOKEN_SIGNER_NAME}
 
-spring.flyway.url=jdbc:postgresql://localhost:5432/receba_db
-spring.flyway.user=postgres
-spring.flyway.password=postgres
+spring.flyway.url=${DATABASE_URL}
+spring.flyway.user=${DATABASE_USERNAME}
+spring.flyway.password=${DATABASE_PASSWORD}
 spring.flyway.locations=classpath:db/migration
 
 receba.security.provider-url=http://localhost:8080
