--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version>0.0.1</version>
     <name>receba</name>
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
         <dockerfile-maven-version>1.4.13</dockerfile-maven-version>
     </properties>
     <dependencies>
@@ -66,6 +66,32 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-apt</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -114,7 +140,31 @@
                     </plugin>
                 </plugins>
             </build>
+        </profile>
 
+        <profile>
+        <!--mvn clean compile -Pquerydsl-->
+            <id>querydsl</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.mysema.maven</groupId>
+                        <artifactId>apt-maven-plugin</artifactId>
+                        <version>1.1.3</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>process</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>target/generated-sources/java</outputDirectory>
+                                    <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 
