Separando authentication server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,18 +21,15 @@ spring.jpa.show-sql=false
 management.endpoints.web.exposure.include=health
 management.health.rabbit.enabled=false
 
-spring.security.oauth2.resourceserver.opaque-token.introspection-uri=http://localhost:8080/oauth2/introspect
-spring.security.oauth2.resourceserver.opaque-token.client-id=receba-frontend
-spring.security.oauth2.resourceserver.opaque-token.client-secret=receba
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/oauth2/jwks
-
-receba.security.jksLocation=classpath:keystore/receba.jks
-receba.security.password=${RSA_TOKEN_SIGNER_PASSWORD}
-receba.security.keypair-alias=${RSA_TOKEN_SIGNER_NAME}
+#My authentication client configuration:
+spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://127.0.0.1:8081/oauth2/introspect
+spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/receba-pkey.pem
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://127.0.0.1:8081
+spring.security.oauth2.resourceserver.opaquetoken.client-secret=receba
+spring.security.oauth2.resourceserver.opaquetoken.client-id=receba-frontend
 
 spring.flyway.url=${DATABASE_URL}
 spring.flyway.user=${DATABASE_USERNAME}
 spring.flyway.password=${DATABASE_PASSWORD}
+spring.flyway.schemas=${SCHEMA}
 spring.flyway.locations=classpath:db/migration
-
-receba.security.provider-url=http://localhost:8080
