Customizando JwtIssuerAuthenticationManagerResolver para aceitar tokens de diferentes serviços configurados, no momento só há o meu próprio e o da google.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,11 +22,12 @@ management.endpoints.web.exposure.include=health
 management.health.rabbit.enabled=false
 
 #My authentication client configuration:
-spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://127.0.0.1:8081/oauth2/introspect
-spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/receba-pkey.pem
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://127.0.0.1:8081
-spring.security.oauth2.resourceserver.opaquetoken.client-secret=receba
-spring.security.oauth2.resourceserver.opaquetoken.client-id=receba-frontend
+receba.security.issuers[0].uri=https://accounts.google.com
+receba.security.issuers[0].audience=720648979863-4thh3jebe2jufhb46kti31r244qvcdnh.apps.googleusercontent.com
+
+receba.security.issuers[1].uri=http://127.0.0.1:8081
+receba.security.issuers[1].audience=receba-frontend #Usando esse por enquanto pq fiquei com preguiça de cadastrar outro.
+
 
 spring.flyway.url=${DATABASE_URL}
 spring.flyway.user=${DATABASE_USERNAME}
